--- a/AUTHORS
+++ b/AUTHORS
@@ -1,4 +1,4 @@
-# This file lists all individuals having contributed content to the repository.
+# This file lists all individuals whom  contributed content to the repository.
 
-Ijabadeniyi Ifedayo <ifedayoadeniyi@gmail.com>
-Cecilia Atabong <>
+EL OUARDI Maha<maha_elouardi@yahoo.com>
+
